kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mallickshop
  labels:
    name: mallickshop
    environment: production
