kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mallickshop-deployment
  labels:
    app: mallickshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mallickshop
  template:
    metadata:
      labels:
        app: mallickshop
    spec:
      containers:
        - name: mallickshop-container
          image: arnab23/mallickshop-app:latest
          ports:
            - containerPort: 3000
